# EnergyPlus-Agent-1

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
agent_test/: DIAGNOSTICS.md  README.md  gen_test_data.py  render_top_view.py  run_robustness_test.py
data/schemas/: building_schema.yaml
docker/: Dockerfile  docker-compose.yml
docs/: BACKHOP_IMPLEMENTATION_SPEC.md  BACKHOP_REDESIGN.md  CURRENT_BACKHOP_INCREMENTAL_FIX_PLAN.md  REMAINING_ISSUES.md
paper/: EnergyPlus-Agent_论文主文档.md
paper/scripts/: fig1_architecture.py  fig2_agent_workflow.py
schemas/: building_schema.yaml
schemas/example/: complex_building.yaml  three_story.yaml  three_story_building.yaml
scripts/: _share.py  deep_multiturn_test.py  deep_test.py  e2e_multiturn.py  e2e_smoke.py  export_trace.py  run_demo.py
skills/energyplus_mcp/: energyplus_mcp_prompt.md  schedule_compact_guide.md  zonetool_prompt.md
src/: converter_manager.py
src/agent/: _share.py  graph.py  llm.py  react.py  runner.py  state.py  subagent.py  tools.py  trace.py
src/configs/: config.py  embedding.yaml  llm.yaml
src/converters/: __init__.py  base_converter.py  building_converter.py  construction_converter.py  fenestration_converter.py  hvac_converter.py  light_converter.py  material_converter.py  people_converter.py  schedule_converter.py  setting_converter.py  surface_converter.py  zone_converter.py
src/mcp/: geometry.py  interface.py  server.py  state.py
src/rag/: chunk.py  embedding.py  rag.py  vector.py
src/results/: __init__.py  charts.py  (+4 more)
tests/: test_agent_backhop_delay.py  test_agent_react_retry.py  test_agent_robustness_output_checks.py  test_agent_zone_validator.py  test_agent_zone_validator_flow.py  test_detect_upstream_gap.py  test_directed_rollback.py  test_glazing_construction_detection.py  test_robustness_zone_validator_signal.py  test_surface_zero_output_guard.py  test_workflow_preflight.py  test_zone_agent.py
ui/: app.py  design_preview.py  idf_viewer.py
(+169 files in other folders)
