[project]
name = "energyplus-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "eppy>=0.5.63",
    "loguru>=0.7.3",
    "numpy>=2.3.4",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "scipy>=1.16.2",
    "trimesh>=4.9.0",
]
